grand dataframe et correctiosn mineurs

--- a/notebooks/draft2.ipynb
+++ b/notebooks/draft2.ipynb
@@ -761,7 +761,31 @@
    "id": "9cc07c2c-f8a3-4f70-bbfa-beb2e7235f3c",
    "metadata": {},
    "source": [
-    "On en tire par là-même la liste des stations hydro dont il faut récupérer les données"
+    "Les stations hydrométriques ne proposant pas une API pour avoir accès à leurs archives, il est nécessaire de télécharger leurs datasets de manière indépendante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "22a9662b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les stations dont il faut récupérer les données dans les archives hydrométriques sont : H512011001, H503011001, H501012001, H320000104, H308000101, H300000201, F712000102, F704000102, F704000101, F490000104, F449000601, F447000101, F400000301, H170001001, H080001101\n"
+     ]
+    }
+   ],
+   "source": [
+    "liste_stations_a_récupérer = []\n",
+    "for element in stations_hydro_clubs['NUM_NHS']:\n",
+    "    if element not in liste_stations_a_récupérer :\n",
+    "        liste_stations_a_récupérer.append(element)\n",
+    "\n",
+    "# Voila les stations dont on doit télécharger l'historique des données hydro à la main\n",
+    "print(\"Les stations dont il faut récupérer les données dans les archives hydrométriques sont : \" + \", \".join(liste_stations_a_récupérer))"
    ]
   },
   {
@@ -3229,7 +3253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "id": "4616157f",
    "metadata": {},
    "outputs": [
@@ -3560,7 +3584,7 @@
        "[449384 rows x 9 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3659,6 +3683,14 @@
     "\n",
     "\n",
     "grand_dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba75760a",
+   "metadata": {},
+   "source": [
+    "/!\\ au niveau des dates ca court encore après le 30 novembre 2024 pour les stations meteo"
    ]
   },
   {
