Construction du modèle de prédiction du débit en random forrest

--- a/notebooks/draft2.ipynb
+++ b/notebooks/draft2.ipynb
@@ -3014,7 +3014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "c3c761eb",
    "metadata": {},
    "outputs": [
@@ -3873,6 +3873,270 @@
     "\n",
     "# Afficher le dataframe trié et réorganisé\n",
     "grand_dataframe_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "002687b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Datetime  Valeur (en m³/s)     T  RR1  \\\n",
+      "21     2023-01-01 00:00:00               NaN  13.1  0.0   \n",
+      "29     2023-01-01 01:00:00               NaN  12.9  0.0   \n",
+      "76     2023-01-01 02:00:00               NaN  12.8  0.0   \n",
+      "96     2023-01-01 03:00:00               NaN  12.5  0.0   \n",
+      "122    2023-01-01 04:00:00               NaN  12.0  0.0   \n",
+      "...                    ...               ...   ...  ...   \n",
+      "449264 2024-12-20 23:00:00               NaN   7.4  0.6   \n",
+      "449305 2024-12-21 00:00:00               NaN   7.8  0.0   \n",
+      "449322 2024-12-21 01:00:00               NaN   8.3  0.0   \n",
+      "449339 2024-12-21 02:00:00               NaN   8.7  0.0   \n",
+      "449372 2024-12-21 03:00:00               NaN   8.6  0.0   \n",
+      "\n",
+      "                                 Club     NUM_NHS   NUM_NWS        LAT  \\\n",
+      "21      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "29      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "76      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "96      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "122     Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "...                               ...         ...       ...        ...   \n",
+      "449264          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449305          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449322          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449339          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449372          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "\n",
+      "             LON  \n",
+      "21      1.687551  \n",
+      "29      1.687551  \n",
+      "76      1.687551  \n",
+      "96      1.687551  \n",
+      "122     1.687551  \n",
+      "...          ...  \n",
+      "449264  2.224766  \n",
+      "449305  2.224766  \n",
+      "449322  2.224766  \n",
+      "449339  2.224766  \n",
+      "449372  2.224766  \n",
+      "\n",
+      "[449384 rows x 9 columns]\n",
+      "Groupes créés par 'Club' :\n",
+      "Club : Association sportive Mantaise, Nombre de lignes : 17284\n",
+      "Club : Aviron 91 Association sportive Corbeil-Essonnes, Nombre de lignes : 17284\n",
+      "Club : Aviron Caudebec Vallée de Seine, Nombre de lignes : 17284\n",
+      "Club : Aviron Club Andelys-Tosny, Nombre de lignes : 17284\n",
+      "Club : Aviron Club de Villennes-Poissy, Nombre de lignes : 17284\n",
+      "Club : Aviron Meulan-les-Mureaux Hardricourt, Nombre de lignes : 17284\n",
+      "Club : Aviron du Coudray-Montceaux, Nombre de lignes : 17284\n",
+      "Club : Aviron du Pays de Fontainebleau, Nombre de lignes : 17284\n",
+      "Club : Boulogne 92, Nombre de lignes : 17284\n",
+      "Club : Cercle d'Aviron Nogentais, Nombre de lignes : 17284\n",
+      "Club : Cercle nautique de Canteleu-Croisset, Nombre de lignes : 17284\n",
+      "Club : Cercle nautique de France, Nombre de lignes : 17284\n",
+      "Club : Cercle nautique de Melun, Nombre de lignes : 17284\n",
+      "Club : Club Nautique Et Athletique De Rouen, Nombre de lignes : 17284\n",
+      "Club : Club Nautique d'Ablon-sur-Seine, Nombre de lignes : 17284\n",
+      "Club : Club Olympique Multisports d'Argenteuil, Nombre de lignes : 17284\n",
+      "Club : Club nautique de Belbeuf, Nombre de lignes : 17284\n",
+      "Club : Club nautique de Soisy-sur-Seine, Nombre de lignes : 17284\n",
+      "Club : Emulation Nautique de Vernon, Nombre de lignes : 17284\n",
+      "Club : Rowing Club de Port-Marly, Nombre de lignes : 17284\n",
+      "Club : SCA 2000 Aviron Evry, Nombre de lignes : 17284\n",
+      "Club : Société Nautique de la Basse-Seine, Nombre de lignes : 17284\n",
+      "Club : Société Nautique de la Haute Seine, Nombre de lignes : 17284\n",
+      "Club : Société nautique troyenne, Nombre de lignes : 17284\n",
+      "Club : Union sportive de Ris-Orangis Aviron, Nombre de lignes : 17284\n",
+      "Club : Val-de-Seine Nautique, Nombre de lignes : 17284\n",
+      "Processing club: Association sportive Mantaise\n",
+      "Processing club: Aviron 91 Association sportive Corbeil-Essonnes\n",
+      "Processing club: Aviron Caudebec Vallée de Seine\n",
+      "Processing club: Aviron Club Andelys-Tosny\n",
+      "Processing club: Aviron Club de Villennes-Poissy\n",
+      "Processing club: Aviron Meulan-les-Mureaux Hardricourt\n",
+      "Processing club: Aviron du Coudray-Montceaux\n",
+      "Processing club: Aviron du Pays de Fontainebleau\n",
+      "Processing club: Boulogne 92\n",
+      "Processing club: Cercle d'Aviron Nogentais\n",
+      "Processing club: Cercle nautique de Canteleu-Croisset\n",
+      "Processing club: Cercle nautique de France\n",
+      "Processing club: Cercle nautique de Melun\n",
+      "Processing club: Club Nautique Et Athletique De Rouen\n",
+      "Processing club: Club Nautique d'Ablon-sur-Seine\n",
+      "Processing club: Club Olympique Multisports d'Argenteuil\n",
+      "Processing club: Club nautique de Belbeuf\n",
+      "Processing club: Club nautique de Soisy-sur-Seine\n",
+      "Processing club: Emulation Nautique de Vernon\n",
+      "Processing club: Rowing Club de Port-Marly\n",
+      "Processing club: SCA 2000 Aviron Evry\n",
+      "Processing club: Société Nautique de la Basse-Seine\n",
+      "Processing club: Société Nautique de la Haute Seine\n",
+      "Processing club: Société nautique troyenne\n",
+      "Processing club: Union sportive de Ris-Orangis Aviron\n",
+      "Processing club: Val-de-Seine Nautique\n",
+      "                  Datetime  Valeur (en m³/s)     T  RR1  \\\n",
+      "21     2023-01-01 00:00:00               NaN  13.1  0.0   \n",
+      "29     2023-01-01 01:00:00               NaN  12.9  0.0   \n",
+      "76     2023-01-01 02:00:00               NaN  12.8  0.0   \n",
+      "96     2023-01-01 03:00:00               NaN  12.5  0.0   \n",
+      "122    2023-01-01 04:00:00               NaN  12.0  0.0   \n",
+      "...                    ...               ...   ...  ...   \n",
+      "449264 2024-12-20 23:00:00               NaN   7.4  0.6   \n",
+      "449305 2024-12-21 00:00:00               NaN   7.8  0.0   \n",
+      "449322 2024-12-21 01:00:00               NaN   8.3  0.0   \n",
+      "449339 2024-12-21 02:00:00               NaN   8.7  0.0   \n",
+      "449372 2024-12-21 03:00:00               NaN   8.6  0.0   \n",
+      "\n",
+      "                                 Club     NUM_NHS   NUM_NWS        LAT  \\\n",
+      "21      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "29      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "76      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "96      Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "122     Association sportive Mantaise  H308000101  78354001  49.005356   \n",
+      "...                               ...         ...       ...        ...   \n",
+      "449264          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449305          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449322          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449339          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "449372          Val-de-Seine Nautique  F704000101  92073001  48.830314   \n",
+      "\n",
+      "             LON  debit_lag1  debit_lag2  debit_lag3  temperature_lag1  \\\n",
+      "21      1.687551         NaN         NaN         NaN               NaN   \n",
+      "29      1.687551         NaN         NaN         NaN              13.1   \n",
+      "76      1.687551         NaN         NaN         NaN              12.9   \n",
+      "96      1.687551         NaN         NaN         NaN              12.8   \n",
+      "122     1.687551         NaN         NaN         NaN              12.5   \n",
+      "...          ...         ...         ...         ...               ...   \n",
+      "449264  2.224766         NaN         NaN         NaN               7.5   \n",
+      "449305  2.224766         NaN         NaN         NaN               7.4   \n",
+      "449322  2.224766         NaN         NaN         NaN               7.8   \n",
+      "449339  2.224766         NaN         NaN         NaN               8.3   \n",
+      "449372  2.224766         NaN         NaN         NaN               8.7   \n",
+      "\n",
+      "        temperature_lag2  temperature_lag3  precipitations_lag1  \\\n",
+      "21                   NaN               NaN                  NaN   \n",
+      "29                   NaN               NaN                  0.0   \n",
+      "76                  13.1               NaN                  0.0   \n",
+      "96                  12.9              13.1                  0.0   \n",
+      "122                 12.8              12.9                  0.0   \n",
+      "...                  ...               ...                  ...   \n",
+      "449264               7.5               7.6                  0.2   \n",
+      "449305               7.5               7.5                  0.6   \n",
+      "449322               7.4               7.5                  0.0   \n",
+      "449339               7.8               7.4                  0.0   \n",
+      "449372               8.3               7.8                  0.0   \n",
+      "\n",
+      "        precipitations_lag2  precipitations_lag3  \n",
+      "21                      NaN                  NaN  \n",
+      "29                      NaN                  NaN  \n",
+      "76                      0.0                  NaN  \n",
+      "96                      0.0                  0.0  \n",
+      "122                     0.0                  0.0  \n",
+      "...                     ...                  ...  \n",
+      "449264                  0.0                  0.0  \n",
+      "449305                  0.2                  0.0  \n",
+      "449322                  0.6                  0.2  \n",
+      "449339                  0.0                  0.6  \n",
+      "449372                  0.0                  0.0  \n",
+      "\n",
+      "[449384 rows x 18 columns]\n",
+      "RMSE: 17.367656793868708\n",
+      "R²: 0.9971808853140423\n",
+      "Prédiction du débit : 15.86 m³/s\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Voilà le dataframe sur lequel on travaille : \n",
+    "grand_df = grand_dataframe\n",
+    "\n",
+    "# Tri des données par club et date\n",
+    "grand_df = grand_df.sort_values(by=['Club', 'Datetime'])\n",
+    "print(grand_df)\n",
+    "\n",
+    "\n",
+    "# Fonction pour créer des décalages (lag features)\n",
+    "def create_lag_features(data, lag_days, column_name, new_column_prefix):\n",
+    "    for lag in range(1, lag_days + 1):\n",
+    "        data[f'{new_column_prefix}_lag{lag}'] = data.groupby('Club')[column_name].shift(lag)\n",
+    "    \n",
+    "    return data\n",
+    "\n",
+    "print(\"Groupes créés par 'Club' :\")\n",
+    "for club, group in grand_df.groupby('Club'):\n",
+    "    print(f\"Club : {club}, Nombre de lignes : {len(group)}\")\n",
+    "\n",
+    "# Ajouter des caractéristiques historiques\n",
+    "days_to_consider = 3  # Nombre de jours précédents à inclure\n",
+    "grand_df = create_lag_features(grand_df, days_to_consider, 'Valeur (en m³/s)', 'debit')\n",
+    "grand_df = create_lag_features(grand_df, days_to_consider, 'T', 'temperature')\n",
+    "grand_df = create_lag_features(grand_df, days_to_consider, 'RR1', 'precipitations')\n",
+    "\n",
+    "for club, group in grand_df.groupby('Club'):\n",
+    "    print(f\"Processing club: {club}\")\n",
+    "    try:\n",
+    "        group = create_lag_features(group, 3, 'Valeur (en m³/s)', 'debit')\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error for club: {club}\")\n",
+    "\n",
+    "print(grand_df)\n",
+    "\n",
+    "# Supprimer les lignes avec des valeurs NaN dues au décalage !!!! Attention je suppose que ca va enlever les lignes aussi ou il n'y a pas toutes les valeurs\n",
+    "grand_df = grand_df.dropna()\n",
+    "\n",
+    "# Variables explicatives et cible\n",
+    "features = [col for col in grand_df.columns if col.startswith(('debit', 'temperature', 'precipitations'))]\n",
+    "features += ['LAT', 'LON']  # Inclure la localisation\n",
+    "target = 'Valeur (en m³/s)'\n",
+    "\n",
+    "X = grand_df[features]\n",
+    "y = grand_df[target]\n",
+    "\n",
+    "# Division des données en ensemble d'entraînement et de test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Entraînement du modèle\n",
+    "model = RandomForestRegressor(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Évaluation\n",
+    "y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "print(f\"RMSE: {rmse}\")\n",
+    "print(f\"R²: {r2_score(y_test, y_pred)}\")\n",
+    "\n",
+    "\n",
+    "future_data = pd.DataFrame({\n",
+    "    'LAT': [49.523301],  # Exemple pour un club\n",
+    "    'LON': [0.711545],\n",
+    "    'debit_lag1': [16.0],  # Valeur du débit du jour précédent\n",
+    "    'debit_lag2': [15.8],\n",
+    "    'debit_lag3': [15.5],\n",
+    "    'temperature_lag1': [11.8],  # Température du jour précédent\n",
+    "    'temperature_lag2': [11.5],\n",
+    "    'temperature_lag3': [11.2],\n",
+    "    'precipitations_lag1': [0.0],  # Précipitations du jour précédent\n",
+    "    'precipitations_lag2': [0.2],\n",
+    "    'precipitations_lag3': [0.1]\n",
+    "})\n",
+    "\n",
+    "# Réorganisez les colonnes de future_data pour correspondre à celles utilisées lors de l'entraînement\n",
+    "future_data = future_data[features]\n",
+    "\n",
+    "prediction = model.predict(future_data)\n",
+    "print(f\"Prédiction du débit : {prediction[0]} m³/s\")\n",
+    "\n",
+    "#Notes : à faire : modéliser le modèle (droite de régression ?), et ensuiete ouvrir l'API et les données météo récénte pour les intégrer dans la prédiction\n"
    ]
   }
  ],
