add du sommaire

--- a/notebooks/Compte-rendu de l'analyse.ipynb
+++ b/notebooks/Compte-rendu de l'analyse.ipynb
@@ -27,6 +27,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6ac5599c",
+   "metadata": {},
+   "source": [
+    "# Sommaire\n",
+    "<!-- TOC maxdepth:5 -->\n",
+    "- [Introduction](#Introduction)\n",
+    "- [Sommaire](#Sommaire)\n",
+    "- [Environnement](#Environnement)\n",
+    "- [Data Loading](#1-data-loading)\n",
+    "  - [Bases de données météo horaire](#1-data-loading)\n",
+    "  - [Bases de données des clubs d'aviron](#1-data-loading)\n",
+    "  - [Clubs d'aviron et stations météorologiques et hydrologiques](#1-data-loading)\n",
+    "  - [Bases de données hydrométriques horaire (Archives)](#1-data-loading)\n",
+    "  - [Bases de données fluviales](#1-data-loading)\n",
+    "- [Data Analysis](#2-data-analysis)\n",
+    "  - [Représentation graphique](#21-représentation-graphique-des-fleuves-des-stations-météorologique-et-hydrométrique-et-des-clubs-daviron)\n",
+    "  - [Précipitations en fonction du temps](#22-graphe-des-précipitations-en-fonction-du-temps)\n",
+    "    - [Heure par heure](#22a-heure-par-heure)\n",
+    "    - [Par semaine](#22b-par-semaine)\n",
+    "  - [Températures en fonction du temps](#23-graphe-des-températures-en-fonction-du-temps)\n",
+    "    - [Heure par heure](#23a-heure-par-heure)\n",
+    "    - [Par semaine](#22b-par-semaine)\n",
+    "  - [Débit en fonction du temps](#24-graphe-du-débit-en-fonction-du-temps)\n",
+    "    - [Heure par heure](#24a-par-heure)\n",
+    "    - [Par semaine](#24b-par-semaine)\n",
+    "- [Data Modeling](#3-data-modeling)\n",
+    "  - [Création du dataframe complet de modélisation](#31-création-du-dataframe-complet-de-modélisation-de-la-situation)\n",
+    "  - [Etude approfondie de corrélation entre les variables](#32-etude-approfondie-de-corrélation-entre-les-variables)\n",
+    "  - [Création du modèle](#33-création-du-modèle)\n",
+    "  - [Prédiction](#34-prédiction)\n",
+    "- [Conclusion](#conclusion)\n",
+    "<!-- /TOC -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3d3cc51",
    "metadata": {},
    "source": [
@@ -252,7 +288,6 @@
    "metadata": {},
    "source": [
     "---\n",
-    "\n",
     "### Bases de données météo horaire\n",
     "Téléchargement depuis météo france / data.gouv.fr des bases de données météo, puis concaténation et nettoyage. Nous nous sommes concentrés sur les départements dans lesquels passe la Seine afin d'obtenir les données météo des localisations proches des clubs d'aviron de long de la Seine."
    ]
@@ -1179,7 +1214,7 @@
    "id": "10b4fe7f-6dab-448c-94f4-73545b9bd50d",
    "metadata": {},
    "source": [
-    "#### 1. Représentation graphique des fleuves, des stations météorologique et hydrométrique, et des clubs d'aviron"
+    "#### 2.1. Représentation graphique des fleuves, des stations météorologique et hydrométrique, et des clubs d'aviron"
    ]
   },
   {
@@ -1278,9 +1313,9 @@
    "id": "ffb7df3f-565c-4fd7-9ba3-7a4e1d964253",
    "metadata": {},
    "source": [
-    "#### 2. Graphe des précipitations en fonction du temps\n",
+    "#### 2.2 Graphe des précipitations en fonction du temps\n",
     "\n",
-    "##### 2. a. <u>Heure par heure</u>"
+    "##### 2.2.a. <u>Heure par heure</u>"
    ]
   },
   {
@@ -1341,7 +1376,7 @@
    "id": "75952575-e421-4b13-b705-3c36d29cfa2a",
    "metadata": {},
    "source": [
-    "##### 2. b. <u>Par semaine</u>"
+    "##### 2.2.b. <u>Par semaine</u>"
    ]
   },
   {
@@ -1425,8 +1460,8 @@
    "id": "80dd9704-ff00-4453-8af7-1808d4d04eb9",
    "metadata": {},
    "source": [
-    "#### 3. Graphe des températures en fonction du temps\n",
-    "##### 3. a. <u>Heure par heure</u>"
+    "#### 2.3. Graphe des températures en fonction du temps\n",
+    "##### 2.3.a. <u>Heure par heure</u>"
    ]
   },
   {
@@ -1471,7 +1506,7 @@
    "id": "a723e0ed-83af-43e6-9866-3ccb203011ef",
    "metadata": {},
    "source": [
-    "##### 3. b. <u>Par semaine</u>"
+    "##### 2.3.b. <u>Par semaine</u>"
    ]
   },
   {
@@ -1548,8 +1583,8 @@
    "id": "f47d6266-670d-4c1c-9726-03f07b5f2108",
    "metadata": {},
    "source": [
-    "#### 4. Graphe du débit en fonction du temps\n",
-    "##### 4 a. <u>Par heure</u>"
+    "#### 2.4. Graphe du débit en fonction du temps\n",
+    "##### 2.4.a. <u>Par heure</u>"
    ]
   },
   {
@@ -1604,7 +1639,7 @@
    "id": "d61bbbf1",
    "metadata": {},
    "source": [
-    "##### 4 b. <u>Par semaine</u>"
+    "##### 2.4.b. <u>Par semaine</u>"
    ]
   },
   {
