review finalisée et mise en page des notebooks

--- a/notebooks/Compte-rendu de l'analyse (without results).ipynb
+++ b/notebooks/Compte-rendu de l'analyse (without results).ipynb
@@ -78,7 +78,9 @@
    "source": [
     "!pip install cartopy\n",
     "!pip install geopy\n",
-    "!pip install jupyter_contrib_nbextensions\n"
+    "!pip install jupyter_contrib_nbextensions\n",
+    "!pip install --upgrade xgboost\n",
+    "!pip install --upgrade cffi"
    ]
   },
   {
@@ -331,7 +333,7 @@
     "\n",
     "#Concaténation des dataframes.\n",
     "clubs_hydro_meteo = pd.merge(stations_meteo_clubs, stations_hydro_clubs, on=[\"Club\", \"Adresse\", \"LAT\", \"LON\"], how=\"inner\")\n",
-    "clubs_hydro_meteo.head()"
+    "clubs_hydro_meteo"
    ]
   },
   {
@@ -967,7 +969,6 @@
     "\n",
     "# Supprimer la colonne datetime originale si elle n'est plus utile\n",
     "result = result.drop(columns=[\"AAAAMMJJHH\"])\n",
-    "\n",
     "result\n"
    ]
   },
@@ -1100,15 +1101,17 @@
    "source": [
     "Nous choisissons le modèle XGBRegressor, en le pensant particulièrement adapté pour des données complexes et des problèmes non linéaires, puisqu'il ne présuppose pas de relation linéaire entre les variables à prédire et les variables explicatives. Paramètres spécifiques utilisés : \n",
     "   \n",
-    "-n_estimators=100 : un bon compromis entre performance et temps de calcul, permet de limiter le temps d'exécution et de rester relativement robuste\n",
+    "-n_estimators=200 : un bon compromis entre performance et temps de calcul, permet de limiter le temps d'exécution et de rester relativement robuste\n",
     "   \n",
     "-learning_rate=0.1 : taux d'apprentissage assez faible, permet d'éviter le surapprentissage\n",
     "   \n",
-    "-max_depth=5 : Limite la profondeur des arbres à 5 et permet de contenir la complexité des sous-modèles,\n",
+    "-max_depth=15 : implique d'avoir des sous-modèles assez complexes mais aussi de gagner en précision,\n",
     "   \n",
     "-subsample=0.8 et colsample_bytree=0.8 : définissent la fraction des échantillons et des colonnes utilisées pour chaque arbre, paramètres assez standardisés\n",
     "   \n",
     "-random_state=42 : assure la reproductibilité des résultats, ce qui est essentiel pour valider la fiabilité de l'approche.\n",
+    "\n",
+    "-weigths sample : nous augmentons artificiellement énormément le poids de la latitude et de la longitude, puisque le débit dépend avant tout d'où sont situés les clubs.\n",
     "\n",
     "En combinant ces réglages, ce modèle permet d'équilibrer précision, vitesse d'apprentissage et généralisation, ce qui est crucial pour prédire des variables influencées par des facteurs environnementaux multiples comme c'est le cas ici."
    ]
@@ -1120,31 +1123,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Création des caractéristiques du modèle : on ajoute la somme des précipitations, la moyenen de la température sur 28 jours, les precipitations sur le jours précédent\n",
+    "# Création des caractéristiques du modèle\n",
     "result_train = create_features(result).copy()\n",
     "\n",
     "# On supprime les lignes avec des valeurs manquantes dues aux décalages\n",
     "result_train = result_train.dropna()\n",
     "\n",
+    "# Liste des variables explicatives\n",
+    "liste_variables_explicatives = ['LAT', 'LON', 'RR1', 'T', 'année', 'mois', 'jour', 'heure', 'RR1_sum_4w', 'T_mean_4w', 'debit_mean_1d']\n",
+    "\n",
     "# Définir les caractéristiques et la cible\n",
-    "features = [col for col in result_train.columns if col not in [\"datetime\", \"Club\", \"debit\"]]\n",
+    "features = [col for col in liste_variables_explicatives]\n",
     "X = result_train[features]\n",
     "y = result_train[\"debit\"]\n",
     "\n",
     "# Division entre l'ensemble train et test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Entrainement du modèle\n",
+    "# Création des poids d'échantillon : 5 pour LAT et LON, 1 pour les autres\n",
+    "sample_weights_train = [100 if (row['LAT'] != 0 and row['LON'] != 0) else 1 for _, row in X_train.iterrows()]\n",
+    "\n",
+    "# Entrainement du modèle avec les poids d'échantillon\n",
     "model = XGBRegressor(\n",
-    "    n_estimators=100,  # Nombre d'arbres\n",
+    "    n_estimators=200,  # Nombre d'arbres\n",
     "    learning_rate=0.1,  # Taux d'apprentissage\n",
-    "    max_depth=5,  # Profondeur maximale des arbres\n",
+    "    max_depth=15,  # Profondeur maximale des arbres\n",
     "    subsample=0.8,  # Fraction d'échantillons pour chaque arbre\n",
-    "    colsample_bytree=0.8, # Fraction de colonnes utilisées par arbre\n",
+    "    colsample_bytree=0.8,  # Fraction de colonnes utilisées par arbre\n",
     "    random_state=42\n",
     ")\n",
     "\n",
-    "model.fit(X_train, y_train)\n",
+    "# Utilisez les poids corrects (sample_weights_train)\n",
+    "model.fit(X_train, y_train, sample_weight=sample_weights_train)\n",
     "\n",
     "# Prédictions\n",
     "y_pred = model.predict(X_test)\n",
@@ -1163,7 +1173,7 @@
    "id": "cd8cbb23",
    "metadata": {},
    "source": [
-    "On obtient un R² proche de 1 et une mean square error a relativiser (entre 10 et 55 selon les exécutions), ce qui est assez satisfaisant."
+    "On obtient un R² proche de 1 et une mean square error a relativiser (entre 10 et 30 selon les exécutions), ce qui est assez satisfaisant."
    ]
   },
   {
@@ -1173,7 +1183,7 @@
    "source": [
     "## 3.4 Prédiction\n",
     "\n",
-    "Notre modèle ets voué à être utilisé par les membres des clubs d'aviron, donc les prédictions sont ajustables.\n",
+    "Notre modèle est voué à être utilisé par les membres des clubs d'aviron, donc les prédictions sont ajustables.\n",
     "On demande à l'utilisateur du service de rentrer la date pour laquelle il souhaite avoir une prédiction du débit, ainsi que les conditions du bassin qu'il souhaite consulter. "
    ]
   },
@@ -1182,7 +1192,7 @@
    "id": "82a44c25",
    "metadata": {},
    "source": [
-    "On récupère toutes les données qui vont permettre de faire la prédiction grâce à cette entrée"
+    "On récupère toutes les données qui vont permettre de faire la prédiction grâce à cette entrée :"
    ]
   },
   {
@@ -1350,8 +1360,7 @@
     "debit_meteo_combined_predict\n",
     "\n",
     "#On ajoute les variables explicatives\n",
-    "debit_meteo_combined_predict=create_features(debit_meteo_combined_predict)\n",
-    "debit_meteo_combined_predict"
+    "debit_meteo_combined_predict=create_features(debit_meteo_combined_predict)"
    ]
   },
   {
@@ -1396,28 +1405,23 @@
    "outputs": [],
    "source": [
     "phrase = f\"Le débit prédit pour le {date} avoisine les {resultat_prediction:.2f} m³/s. \"\n",
-    "x_plot =debit_jours_precedents_daily[\"date\"]\n",
-    "y_plot= debit_jours_precedents_daily[\"debit\"]\n",
+    "\n",
     "# Ajout des recommandations en fonction du débit\n",
     "if 550 <= resultat_prediction <= 750:\n",
     "    phrase += (\n",
     "        \"Le débit est assez fort. Nous vous recommandons vivement de ne pas sortir en bateau individuel, pour votre sécurité. \" \n",
-    "        \"Pour votre information, voilà la tendance des variations du début de ces 30 derniers jours\"\n",
     "    )\n",
     "elif resultat_prediction > 750:\n",
     "    phrase += (\n",
     "        \"Attention : le débit est extrêmement élevé. Toute sortie sur l'eau est formellement interdite pour votre sécurité. \" \n",
-    "        \"Pour votre information, voilà la tendance des variations du début de ces 30 derniers jours\"\n",
     "    )\n",
     "else:\n",
     "    phrase += (\n",
     "        \"Les conditions sont idéales ! Vous pouvez profiter sereinement de votre sortie sur l'eau. \"\n",
-    "        \"Pour votre information, voilà la tendance des variations du début de ces 30 derniers jours\"\n",
     "    )\n",
     "\n",
     "# Affichage de la réponse complète\n",
-    "display(Markdown(phrase))\n",
-    "trace_graphique(x_plot, y_plot, f\"Évolution du débit moyen quotidien pour le club {club}\", \"Date\", \"Débit (m³/s)\")\n"
+    "display(Markdown(phrase))\n"
    ]
   },
   {
@@ -1432,7 +1436,7 @@
     "\n",
     "Afin de ne pas perdre de temps à télécharger des centaines de bases de données hydrométriques nous avons donc choisi de restreindre notre modèle à la Seine. \n",
     "\n",
-    "Quelques pistes d'amélioration peuvent être envisagées : trouver le nombre maximal de jours en dessous duquel la prédiction reste à peu près fiable, créer une vraie interface utilisateur, ou encore affiner notre modèle avec des données géographiques comme les géométries de bassin (reliefs, goulots d'écoulement). Une nuance est à apporter d'ailleurs entre débit et courant : dans le monde de l'aviron, on utilise uniquement de débit, mais pour plus de justesse on devrait utiliser la notion de courant (débit x volume)."
+    "Quelques pistes d'amélioration peuvent être envisagées : trouver le nombre maximal de jours en dessous duquel la prédiction reste à peu près fiable, donner un plus grand poids à la localisation du club d'aviron dans le modèle (tendance à surestimer le débit en amont de la Seine),  créer une vraie interface utilisateur, ou encore affiner notre modèle avec des données géographiques comme les géométries de bassin (reliefs, goulots d'écoulement). Une nuance est à apporter d'ailleurs entre débit et courant : dans le monde de l'aviron, on utilise uniquement de débit, mais pour plus de justesse on devrait utiliser la notion de courant (débit x volume)."
    ]
   }
  ],
